[workspace]
members = ["crates/sync-guest"]
resolver = "2"

[package]
name = "ultelier"
version = "0.1.0"
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["plugin", "sync-guest"]
plugin = ["dep:imgui-api", "dep:nsuite"]
sync-guest = ["dep:ssbusync_guest"]

[dependencies]
imgui-api = { git = "https://github.com/Coolsonickirby/imgui-api.git", optional = true }
nsuite = { path = "../VsyncPatchedHDR/ssbu-less-lag/nsuite", default-features = false, optional = true }
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
ssbusync_guest = { package = "ssbusync-guest", path = "crates/sync-guest", optional = true }

[patch.crates-io]
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
nnsdk = { git = "https://github.com/ultimate-research/nnsdk-rs" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
