[package]
name = "ultelier"
version = "0.1.0"
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["sync-guest"]
plugin = ["console", "sync-guest"]
console = ["dep:imgui-api", "dep:nsuite"]
sync-guest = []

[dependencies]
imgui-api = { git = "https://github.com/Coolsonickirby/imgui-api.git", optional = true }
nsuite = { path = "../VsyncPatchedHDR/ssbu-less-lag/nsuite", default-features = false, optional = true }
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }

[patch.crates-io]
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
nnsdk = { git = "https://github.com/ultimate-research/nnsdk-rs" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
